<resources>
    <string name="app_name">Chemistry Help</string>
    <string name="convertTopic_prompt">Convert&#8230;</string>
    <string-array name="Topic_array">
        <item></item>
        <item>Volume</item>
        <item>Pressure</item>
        <item>Temperature</item>
    </string-array>
    <string-array name="UnitTemperature_array">
        <item>K</item>
        <item>C</item>
        <item>F</item>
    </string-array>
    <string-array name="UnitPressure_array">
        <item>atm</item>
        <item>mmHg</item>
        <item>torr</item>
        <item>kPa</item>
    </string-array>
    <string-array name="UnitVolume_array">
        <item>L</item>
        <item>mL</item>
        <item>g</item>
    </string-array>
    <string-array name="UnitMole_array">
        <item>mol</item>
    </string-array>
    <string-array name="DecimalPoints_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="blank_array">
        <item></item>
    </string-array>
    <string name="blankForN">Leave blank to solve N</string>
    <string name="blankForV">Leave blank to solve V</string>
    <string name="blankForP">Leave blank to solve P</string>
    <string name="blankForT">Leave blank to solve T</string>
    <string name="blankForV1">Leave blank to solve V1</string>
    <string name="blankForP1">Leave blank to solve P1</string>
    <string name="blankForT1">Leave blank to solve T1</string>
    <string name="blankForV2">Leave blank to solve V2</string>
    <string name="blankForP2">Leave blank to solve P2</string>
    <string name="blankForT2">Leave blank to solve T2</string>
    <string name="saveButton">Save</string>
    <string name="MENU_GasLaws">Gas Laws</string>
    <string name="MENU_Molarity">Molarity</string>
    <string name="MENU_Settings">Settings</string>
    <string name="MENU_Convert">Convert</string>
    <string name="MENU_Thermochemistry">Heat Chemistry</string>
    <string name="MENU_ChemicalSearch">Chemical Search</string>
    <string-array name="ChemicalFormula_array">
        <item>Ac</item>
        <item>Ag</item>
        <item>Al</item>
        <item>Am</item>
        <item>Ar</item>
        <item>As</item>
        <item>At</item>
        <item>Au</item>
        <item>B</item>
        <item>Ba</item>
        <item>Be</item>
        <item>Bh</item>
        <item>Bi</item>
        <item>Bk</item>
        <item>Br</item>
        <item>C</item>
        <item>Ca</item>
        <item>Cd</item>
        <item>Ce</item>
        <item>Cf</item>
        <item>Cl</item>
        <item>Cm</item>
        <item>Co</item>
        <item>Cn</item>
        <item>Cr</item>
        <item>Cs</item>
        <item>Cu</item>
        <item>Db</item>
        <item>Ds</item>
        <item>Dy</item>
        <item>Er</item>
        <item>Es</item>
        <item>Eu</item>
        <item>F</item>
        <item>Fe</item>
        <item>Fm</item>
        <item>Fr</item>
        <item>Ga</item>
        <item>Gd</item>
        <item>Ge</item>
        <item>H</item>
        <item>He</item>
        <item>Hf</item>
        <item>Hg</item>
        <item>Ho</item>
        <item>Hs</item>
        <item>I</item>
        <item>In</item>
        <item>Ir</item>
        <item>K</item>
        <item>Kr</item>
        <item>La</item>
        <item>Li</item>
        <item>Lr</item>
        <item>Lu</item>
        <item>Md</item>
        <item>Mg</item>
        <item>Mn</item>
        <item>Mo</item>
        <item>Mt</item>
        <item>N</item>
        <item>Na</item>
        <item>Nb</item>
        <item>Nd</item>
        <item>Ne</item>
        <item>Ni</item>
        <item>No</item>
        <item>Np</item>
        <item>O</item>
        <item>Os</item>
        <item>P</item>
        <item>Pa</item>
        <item>Pb</item>
        <item>Pd</item>
        <item>Pm</item>
        <item>Po</item>
        <item>Pr</item>
        <item>Pt</item>
        <item>Pu</item>
        <item>Ra</item>
        <item>Rb</item>
        <item>Re</item>
        <item>Rf</item>
        <item>Rg</item>
        <item>Rh</item>
        <item>Rn</item>
        <item>Ru</item>
        <item>S</item>
        <item>Sb</item>
        <item>Sc</item>
        <item>Se</item>
        <item>Sg</item>
        <item>Si</item>
        <item>Sm</item>
        <item>Sn</item>
        <item>Sr</item>
        <item>Ta</item>
        <item>Tb</item>
        <item>Tc</item>
        <item>Te</item>
        <item>Th</item>
        <item>Ti</item>
        <item>Tl</item>
        <item>Tm</item>
        <item>U</item>
        <item>Uuh</item>
        <item>Uun</item>
        <item>Uuo</item>
        <item>Uup</item>
        <item>Uuq</item>
        <item>Uus</item>
        <item>Uut</item>
        <item>Uuu</item>
        <item>V</item>
        <item>W</item>
        <item>Xe</item>
        <item>Y</item>
        <item>Yb</item>
        <item>Zn</item>
        <item>Zr</item>
    </string-array>
    <string name="PlaceHolder_VALUE">Value</string>
    <string name="dialogUpdated_Close">Got It!</string>
    <string name="dialogUpdate_Update5Content">- Additional controls in gas laws \n- Rearranged control bar in gas laws \n- Conversion fixes in gas laws \n- Units are now shown in results \n- Warning disappears after exiting application</string>
    <string name="dialogUpdate_Update5Date">July 2, 2012</string>
    <string name="dialogUpdate_Update5">Version 0.36</string>
    <string name="dialogUpdate_Update4Content">- Added periodic table. [New] \n- Added molarity. [New] \n- Redesigned Settings UI and added option to keep same units under each category. \n- Convert now automatically converts what you input without the need to click submit. \n- Added Swap, Copy, and Clear to conversions. \n- Simplified use of convert.</string>
    <string name="dialogUpdate_Update4Date">July 8, 2012</string>
    <string name="dialogUpdate_Update4">Version 0.4</string>
    <string name="dialogUpdate_Update3Content">- [New] Added molarity. \n- [New]Smart Actions for gas laws. (Enable them via settings menu) \n- [New] Conversions settings \n- UI changes in gas laws \n- More accurate information \n- Code optomizations</string>
    <string name="dialogUpdate_Update3Date">August 1, 2012</string>
    <string name="dialogUpdate_Update3">Version 0.5</string>
    <string name="dialogUpdate_Update2Content">- [New] Quick bookmarks! \n- [New] Improved UI. \n- [New] Ability to show work on gas laws. \n- Fixed rare force close issue on Molar Mass. \n- Fixed Empirical formula calculations on Molar Mass. \n- Fixed Gas Law solving related issues. \n- Name corrections. \n- Brought back Holo theme on older devices. (Sorry about that)</string>
    <string name="dialogUpdate_Update2Date">August 19, 2012</string>
    <string name="dialogUpdate_Update2">Version 0.6</string>
    <string name="dialogUpdate_Update1Content">- [New] Quiz Mode! \n- [New] Tutorials to help you study! \n- [New] Element List tab in Periodic Table! \n- [New] Element View cards. \n- [New] App To SD Support! \n- [Improved] Periodic Table. \n- [Improved] Update Notifications. \n- [Improved] Much better performance. \n- [Fixed] Solved convert crash issue. \n- [Fixed] Solved molar mass crash issue. \n- [Fixed] Solved gas laws crash issue.</string>
    <string name="dialogUpdate_Update1Date">December 21, 2012</string>
    <string name="dialogUpdate_Update1">Version 0.7</string>
    <string name="CONVERT_Convert">Convert</string>
    <string name="CONVERT_Clear">Clear</string>
    <string name="CONVERT_Blank">Leave this field blank</string>
    <string name="CONVERT_To">to</string>
    <string name="CONVERT_EnterNumber">Enter number</string>
    <string name="CONVERT_Swap">Swap</string>
    <string name="DialogBOOKMARKS_Cancel">Cancel</string>
    <string name="DialogBOOKMARKS_Add">Add</string>
    <string name="DialogBOOKMARKS_AddDescriptionIcon">Add Description &amp; Icon</string>
    <string name="DialogBOOKMARKS_BookmarkName">Enter bookmark name</string>
    <string name="DialogBOOKMARKS_ChangeIcon">Change Icon</string>
    <string name="DialogBOOKMARKS_Description">Description:</string>
    <string name="DialogBOOKMARKS_Name">Name:</string>
    <string name="DialogBOOKMARKS_AddDescription">Enter bookmark description</string>
    <string name="DialogBOOKMARKS_Icon1">icon 1</string>
    <string name="DialogBOOKMARKS_Icon2">icon 2</string>
    <string name="DialogBOOKMARKS_Icon3">icon 3</string>
    <string name="DialogBOOKMARKS_Icon4">icon 4</string>
    <string name="DialogBOOKMARKS_Icon5">icon 5</string>
    <string name="DialogBOOKMARKS_Icon6">icon 6</string>
    <string name="DialogBOOKMARKS_Icon7">icon 7</string>
    <string name="DialogBOOKMARKS_Icon8">icon 8</string>
    <string name="DialogBOOKMARKS_Icon9">icon 9</string>
    <string name="DialogBOOKMARKS_Icon10">icon 10</string>
    <string name="DialogBOOKMARKS_Icon11">icon 11</string>
    <string name="DialogBOOKMARKS_Icon12">icon 12</string>
    <string name="DialogBOOKMARKS_Icon13">icon 13</string>
    <string name="DialogBOOKMARKS_Icon14">icon 14</string>
    <string name="DialogBOOKMARKS_Icon15">icon 15</string>
    <string name="DialogBOOKMARKS_Icon16">icon 16</string>
</resources>