<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:text="@string/dialogUpdate_Update1Date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update1Content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:text="@string/dialogUpdate_Update2Date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update2Content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:text="@string/dialogUpdate_Update3Date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update3Content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dialogUpdate_Update4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:text="@string/dialogUpdate_Update4Date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update4Content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dialogUpdate_Update5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="3dp"
                android:text="@string/dialogUpdate_Update5Date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF33B5E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/dialogUpdate_Update5Content" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="@drawable/black_white_gradient" />

        <Button
            android:id="@+id/Close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/button_blue_background"
            android:text="@string/dialogUpdated_Close"
            android:textColor="@color/button_dark_text" />
    </RelativeLayout>

</LinearLayout>
